# technical-analysis-react-agent

./: .env.example  LICENSE  README.md  pyproject.toml
src/: main.py
src/agents/: trading_agent.py
src/analysis/indicators/: fibonacci.py  momentum.py  support_and_resistance.py  trend.py  volatility.py  volume.py
src/analysis/search/: ddgs.py
src/config/: logging_config.py
src/data/: basemodels.py  enums.py  fetcher.py
src/graph/: react_graph.py
src/models/: client.py
src/prompts/: system.py
src/state/: states.py
src/utils/: helpers.py
